# CRMs_supply_chain_plausibilty

./: .gitignore  README.md  pyproject.toml
webapp/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
webapp/api/: index.py
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/company/[id]/: page.tsx
webapp/app/company/[id]/report/: page.tsx
webapp/app/components/: CompanyMap.tsx  CompanyView.tsx  DashboardClient.tsx  Footer.tsx  Header.tsx  KnowledgeGraph.tsx  MapLeaflet.tsx  MineralView.tsx  ReportView.tsx  ScoreGauge.tsx  Sparkbar.tsx  Treemap.tsx  arc.ts  constants.ts  icons.tsx  markerIcons.tsx
webapp/app/minerals/[mineral]/: page.tsx
webapp/lib/: data.ts  site.ts  types.ts
webapp/pipeline/: build_data.py  export_ndvi_rasters.py
webapp/public/data/: companies.json  manifest.json  minerals.json  paths.json
webapp/public/data/company/: gold__Bosch.json  gold__Heraeus.json  gold__Nokia.json  gold__Pandora.json  gold__Umicore.json  lithium__AMG_Critical_Materials.json  lithium__BMW.json  lithium__Stellantis.json  lithium__Umicore.json  lithium__Volkswagen.json  rare_earths__BMW.json  rare_earths__Bosch.json  rare_earths__Siemens_Gamesa.json  rare_earths__Vacuumschmelze.json  rare_earths__Vestas.json
webapp/public/data/geojson/: all.geojson  gold.geojson  lithium.geojson  rare_earths.geojson
